==> ab25cq/comelang/sd/mmc_pico_spi.c <==
#include "pico/stdlib.h"
#include <stdio.h>
#include "hardware/spi.h"
#define DEF_SPI_TX_PIN 19 // 赤
#define DEF_SPI_RX_PIN 16 // 茶
#define DEF_SPI_SCK_PIN 18 // 紫
#define DEF_SPI_CSN_PIN 17 // オレンジ
#define SPIDEV spi0
#define FCLK_FAST()    { }
#define FCLK_SLOW()    { }
#define CS_HIGH()    { gpio_put( DEF_SPI_CSN_PIN, 1 ); /* HIGH */ }
#define CS_LOW()    { gpio_put(DEF_SPI_CSN_PIN , 0 ); /* LOW */ }
#define    MMC_CD        1 /* Card detect (yes:true, no:false, default:true) */
#define    MMC_WP        0 /* Write protected (yes:true, no:false, default:false) */

static void rcvr_spi_multi (
    BYTE *buff,        /* Pointer to data buffer */
    UINT btr        /* Number of bytes to receive (even number) */
)
{

    spi_read_blocking( SPIDEV, 0xff, buff, btr );
}

static void xmit_spi_multi (
    const BYTE *buff,    /* Pointer to the data */
    UINT btx            /* Number of bytes to send (even number) */
)
{
    spi_write_blocking( SPIDEV, buff, btx );
}

DSTATUS disk_initialize (BYTE drv   /* Physical drive number (0) */)
{
    BYTE n, cmd, ty, ocr[4];

    if (drv) return STA_NOINIT;     /* Supports only drive 0 */
    init_spi();     /* Initialize SPI */

    if (Stat & STA_NODISK) return Stat;   /* Is card existing in the soket? */

    FCLK_SLOW();
    for (n = 10; n; n--) xchg_spi(0xFF);  /* Send 80 dummy clocks */

    ty = 0;
    if (send_cmd(CMD0, 0) == 1) {        /* Put the card SPI/Idle state */
        Timer1 = 1000;                   /* Initialization timeout = 1 sec */
        if (send_cmd(CMD8, 0x1AA) == 1) {   /* SDv2? */
        for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);    /* Get 32 bit return value of R7 resp */
        if (ocr[2] == 0x01 && ocr[3] == 0xAA) {             /* Is the card supports vcc of 2.7-3.6V? */
        while (Timer1 && send_cmd(ACMD41, 1UL << 30)) ;     /* Wait for end of initialization with ACMD41(HCS) */
        if (Timer1 && send_cmd(CMD58, 0) == 0) {            /* Check CCS bit in the OCR */
        for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);
            ty = (ocr[0] & 0x40) ? CT_SDC2 | CT_BLOCK : CT_SDC2;    /* Card id SDv2 */
        }
    }
    } else {   /* Not SDv2 card */
        if (send_cmd(ACMD41, 0) <= 1) {    /* SDv1 or MMC? */
            ty = CT_SDC1; cmd = ACMD41;    /* SDv1 (ACMD41(0)) */
        } else {
            ty = CT_MMC3; cmd = CMD1;    /* MMCv3 (CMD1(0)) */
        }
        while (Timer1 && send_cmd(cmd, 0));   /* Wait for end of initialization */
        if (!Timer1 || send_cmd(CMD16, 512) != 0)   /* Set block length: 512 */
            ty = 0;
        }
    }
    CardType = ty;     /* Card type */
    deselect();

    if (ty) {          /* OK */
        FCLK_FAST();   /* Set fast clock */
        Stat &= ~STA_NOINIT;   /* Clear STA_NOINIT flag */
    } else {    /* Failed */
        Stat = STA_NOINIT;
    }

    return Stat;
}

DRESULT disk_ioctl (
    BYTE drv,        /* Physical drive number (0) */
    BYTE cmd,        /* Control command code */
    void *buff        /* Pointer to the conrtol data */
)
{
    DRESULT res;
    BYTE n, csd[16];
    DWORD st, ed, csize;
    LBA_t *dp;


    if (drv) return RES_PARERR;                    /* Check parameter */
    if (Stat & STA_NOINIT) return RES_NOTRDY;    /* Check if drive is ready */

    res = RES_ERROR;

    switch (cmd) {
    case CTRL_SYNC :        /* Wait for end of internal write process of the drive */
        if (select()) res = RES_OK;
        break;

    case GET_SECTOR_COUNT :    /* Get drive capacity in unit of sector (DWORD) */
        if ((send_cmd(CMD9, 0) == 0) && rcvr_datablock(csd, 16)) {
            if ((csd[0] >> 6) == 1) {    /* SDC CSD ver 2 */
                csize = csd[9] + ((WORD)csd[8] << 8) + ((DWORD)(csd[7] & 63) << 16) + 1;
                *(LBA_t*)buff = csize << 10;
            } else {                    /* SDC CSD ver 1 or MMC */
                n = (csd[5] & 15) + ((csd[10] & 128) >> 7) + ((csd[9] & 3) << 1) + 2;
                csize = (csd[8] >> 6) + ((WORD)csd[7] << 2) + ((WORD)(csd[6] & 3) << 10) + 1;
                *(LBA_t*)buff = csize << (n - 9);
            }
            res = RES_OK;
        }
        break;

    case GET_BLOCK_SIZE :    /* Get erase block size in unit of sector (DWORD) */
        if (CardType & CT_SDC2) {    /* SDC ver 2+ */
            if (send_cmd(ACMD13, 0) == 0) {    /* Read SD status */
                xchg_spi(0xFF);
                if (rcvr_datablock(csd, 16)) {                /* Read partial block */
                    for (n = 64 - 16; n; n--) xchg_spi(0xFF);    /* Purge trailing data */
                    *(DWORD*)buff = 16UL << (csd[10] >> 4);
                    res = RES_OK;
                }
            }
        } else {                    /* SDC ver 1 or MMC */
            if ((send_cmd(CMD9, 0) == 0) && rcvr_datablock(csd, 16)) {    /* Read CSD */
                if (CardType & CT_SDC1) {    /* SDC ver 1.XX */
                    *(DWORD*)buff = (((csd[10] & 63) << 1) + ((WORD)(csd[11] & 128) >> 7) + 1) << ((csd[13] >> 6) - 1);
                } else {                    /* MMC */
                    *(DWORD*)buff = ((WORD)((csd[10] & 124) >> 2) + 1) * (((csd[11] & 3) << 3) + ((csd[11] & 224) >> 5) + 1);
                }
                res = RES_OK;
            }
        }
        break;

    case CTRL_TRIM :    /* Erase a block of sectors (used when _USE_ERASE == 1) */
        if (!(CardType & CT_SDC)) break;                /* Check if the card is SDC */
        if (disk_ioctl(drv, MMC_GET_CSD, csd)) break;    /* Get CSD */
        if (!(csd[10] & 0x40)) break;                    /* Check if ERASE_BLK_EN = 1 */
        dp = buff; st = (DWORD)dp[0]; ed = (DWORD)dp[1];    /* Load sector block */
        if (!(CardType & CT_BLOCK)) {
            st *= 512; ed *= 512;
        }
        if (send_cmd(CMD32, st) == 0 && send_cmd(CMD33, ed) == 0 && send_cmd(CMD38, 0) == 0 && wait_ready(30000)) {    /* Erase sector block */
            res = RES_OK;    /* FatFs does not check result of this command */
        }
        break;

    /* Following commands are never used by FatFs module */

    case MMC_GET_TYPE:        /* Get MMC/SDC type (BYTE) */
        *(BYTE*)buff = CardType;
        res = RES_OK;
        break;

    case MMC_GET_CSD:        /* Read CSD (16 bytes) */
        if (send_cmd(CMD9, 0) == 0 && rcvr_datablock((BYTE*)buff, 16)) {    /* READ_CSD */
            res = RES_OK;
        }
        break;

    case MMC_GET_CID:        /* Read CID (16 bytes) */
        if (send_cmd(CMD10, 0) == 0 && rcvr_datablock((BYTE*)buff, 16)) {    /* READ_CID */
            res = RES_OK;
        }
        break;

    case MMC_GET_OCR:        /* Read OCR (4 bytes) */
        if (send_cmd(CMD58, 0) == 0) {    /* READ_OCR */
            for (n = 0; n < 4; n++) *(((BYTE*)buff) + n) = xchg_spi(0xFF);
            res = RES_OK;
        }
        break;

    case MMC_GET_SDSTAT:    /* Read SD status (64 bytes) */
        if (send_cmd(ACMD13, 0) == 0) {    /* SD_STATUS */
            xchg_spi(0xFF);
            if (rcvr_datablock((BYTE*)buff, 64)) res = RES_OK;
        }
        break;

    default:
        res = RES_PARERR;
    }

    deselect();

    return res;
}
